# obli-fs

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.adoc  CONTRIBUTING.adoc  Containerfile  FUNDING.yml  GOVERNANCE.adoc  LICENSE.txt  MAINTAINERS.md  SECURITY.md  flake.nix  justfile
.well-known/: security.txt
grammar/: oblibeny-v0.6.ebnf
outreach/: comparison.adoc  comparison.md  elevator-pitch.adoc  elevator-pitch.md  faq-objections.adoc  faq-objections.md  glossary.adoc  glossary.md  technical-summary.adoc  technical-summary.md
spec/: architecture.adoc  architecture.md  type-specification.adoc  type-specification.md
src/: package.json  rescript.json
src/core/: Entity.res  Types.res
src/entities/: Manifest.res
src/runtime/: mod.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
